Mudanças no css e html

--- a/CanMyPCRun/form.html
+++ b/CanMyPCRun/form.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+        <h1 id="logo">CanMyPCRun</h1>
+        <a href="#">Jogos</a>
+        <a href="Sobre.html">Sobre</a>
+        <a href="#">Recursos</a>
+    </nav>
+</header>
   <div class="container">
+
     <h1>Conte-nos sobre o seu PC</h1>
 
     <div style="display: flex;">
