--- a/CanMyPCRun/index.html
+++ b/CanMyPCRun/index.html
@@ -7,18 +7,15 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h1 id="logo">CanMyPCRun</h1>
+            <a href="#">Jogos</a>
+            <a href="Sobre.html">Sobre</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
     <div class="container">
-        <header>
-            <nav>
-                <h1>CanMyPCRun</h1>
-                <a href="#">Jogos</a>
-                <a href="#">Experiências</a>
-                <a href="#">Sobre</a>
-                <a href="#">Compromissos</a>
-                <a href="#">Recursos</a>
-            </nav>
-        </header>
-
         <main>
             <a href="form.html">
             <div class="game-grid">
